# odoo_translator

./: CHANGELOG.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  test_cli.py  test_language_utils.py  test_offline_translator.py  test_translation_debug.py  test_translator.py
src/po_translator/: __init__.py  cli.py  translator.py
src/po_translator/core/: indexer.py  merger.py
src/po_translator/gui/: app.py  theme.py
src/po_translator/gui/components/: sidebar.py  statusbar.py  table.py  toolbar.py
src/po_translator/gui/dialogs/: __init__.py  edit_dialog.py  export_dialog.py  language_mismatch_dialog.py  statistics_dialog.py
src/po_translator/utils/: language.py  logger.py
test_files/: fr_translated_20251029.po
