[project]
name = "po-translator"
version = "1.0.0"
description = "AI-assisted translation workflow for Odoo PO files"
readme = "README.md"
authors = [{ name = "k11e3r" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "polib",
  "langdetect",
  "langid",
  "customtkinter",
  "google-generativeai",
  "googletrans==4.0.0rc1"
]

[project.scripts]
po-translator = "po_translator.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
